--- a/bootstrap/editor.html
+++ b/bootstrap/editor.html
@@ -7,6 +7,10 @@ html {
     height: 100%;
 }
 
+#contentPane {
+margin-top:60px
+}
+
 body { margin: 0px;
     height: 100%;}
 
@@ -17,9 +21,8 @@ body { margin: 0px;
 
 }
 #map {
-    padding: 0px;
-    top:30px;
-    height: 100%;
+width:100%;
+height:600px;
 }
 #controlBox {
   position: fixed;
@@ -51,17 +54,16 @@ box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.5);
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+  <link rel="stylesheet" href="css/leaflet.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
       <![endif]-->
 
 
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
-  <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+  <script src="js/jquery-1.9.1.min.js"></script>
+  <script src="js/leaflet.js"></script>
+  <script src="js/underscore-min.js"></script>
+  <script src="js/backbone.js"></script>
   <script src="editor.js"></script>
 	<script src="nyc.json" type="text/javascript"></script>
 
@@ -69,6 +71,7 @@ box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.5);
 <body>
   <script src="js/bootstrap.min.js"></script>
 
+<!--
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -84,20 +87,46 @@ box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.5);
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>
         </div>
       </div>
     </div>
+-->
 
-  <div id="wrap" class="container">
-    <div id="map"></div>
-
-    <div id="controlBox">
-      this is the control box
+        <div class="container" id="contentPane">
+            <div class="row main-row">
+                <div class="span12">
+                    <div class="row">
+                        <div id="data" class="span2 pull-left">
+                            <div class="overview">
+this is the control box
       'Paint mode': <button type="button" id="paintMode" class="btn btn-primary" data-loading-text="Off" data-toggle="button">On</button>
-      Currently selected neighborhood: <span id="selectedNeighborhood"></span> (ctrl-click to select a neighborhood for painting, left click maybe?)
-    </div>
+      <span id="neighborhoodInfo"></span>
+
+                            </div>
+                        </div>
+                        <div id="map-area" class="span10 pull-right">
+                            <div id="map"></div>
+                        </div>
+                    </div>
+                </div><!-- end of main row -->
+            </div>
+
+        </div><!-- /container -->
+
+<div class="modal hide fade" id="neighborhoodSelectModal">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Neighborhood Select</h3>
   </div>
+  <div class="modal-body">
+    <p>Neighborhoods <select class="neighborhoodSelect"></select></p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn closeButton">Close</a>
+    <a href="#" class="btn btn-primary saveButton">Save changes</a>
+  </div>
+</div>
 
 	<script>
     $('.controlBox').button()
