--- a/bootstrap/editor.html
+++ b/bootstrap/editor.html
@@ -33,12 +33,12 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="#">the-neighborhood-project</a>
-          <div class="nav-collapse">
+        <!--  <div class="nav-collapse">
             <ul class="nav">
               <li>1</li>
               <li class="active">2</li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -50,8 +50,8 @@
         </div>
         <div class="span3">
           <div class="well">
-      this is the control box
-      'Paint mode': <button type="button" id="paintMode" class="btn btn-primary" data-loading-text="Off" data-toggle="button">On</button>
+      'Polygon mode': <button type="button" id="polygonMode" class="btn btn-primary" data-loading-text="Off" data-toggle="button">On</button>
+      <p>
       <span id="neighborhoodInfo"></span>
           </div>
         </div>
